# OS_Lab3

./: OS_Lab3.sln  README.md
OS_Lab3/: Main.cpp
OS_Lab3 (C++98)/: Main.cpp  Makefile
OS_Lab3/OS_Lab3/: Main.cpp  OS_Lab3.vcxproj
Tests/src/: CMakeLists.txt
Tests/src/Test/: CMakeLists.txt  marker_thread.h  tests.cpp
